(4.2.7p11) 2010/01/28 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 47] Debugging and logging do not work after a fork.
* [Bug 1010] getaddrinfo() could block and thus should not be called by
  the main thread/process.
(4.2.7p10) 2010/01/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1140] Clean up debug.html, decode.html, and ntpq.html.
* Include (4.2.6p1-RC3) - Use TZ=UTC instead of TZ= when calling date in
  scripts/mkver.in .
* Include (4.2.6p1-RC3) - [Bug 1448] Some macros not correctly conditionally
  or absolutely defined on Windows.
* Include (4.2.6p1-RC3) - [Bug 1449] ntpsim.h in ntp_config.c should be used
  conditionally.
* Include (4.2.6p1-RC3) - [Bug 1450] Option to exclude warnings not
  unconditionally defined on Windows.
(4.2.7p9) 2010/01/13 Released by Harlan Stenn <stenn@ntp.org>
(4.2.7p8) 2010/01/12 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 702] ntpd service logic should use libopts to examine cmdline.
* Include (4.2.6p1-RC3) - [Bug 1451] sntp leaks KoD entry updating.
* Include (4.2.6p1-RC3) - [Bug 1453] Use $CC in config.cache filename.
(4.2.7p7) 2009/12/30 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 620] ntpdc getresponse() esize != *rsize s/b size != *rsize.
* [Bug 1446] 4.2.7p6 requires autogen, missing ntpd.1, *.texi, *.menu.
(4.2.7p6) 2009/12/28 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1443] Remove unnecessary dependencies on ntp_io.h
* [Bug 1442] Move Windows functions into libntp files
* Include (4.2.6p1-RC3) - [Bug 1127] Check the return of X590_verify().
* Include (4.2.6p1-RC3) - [Bug 1439] .texi gen after binary is linked.
* Include (4.2.6p1-RC3) - [Bug 1440] Update configure.ac to support kfreebsd.
* Include (4.2.6p1-RC3) - [Bug 1445] IRIX does not have -lcap or support
  linux capabilities.
(4.2.7p5) 2009/12/25 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.6p1-RC2)
(4.2.7p4) 2009/12/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1429] ntpd -4 option does not reliably force IPv4 resolution.